--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Lolicon - Home</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,7 +18,7 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="C:\Users\a-888\Desktop\Lolicon\home.html" class="w3-bar-item w3-button w3-padding-large">LOLICON</a>
+    <a href="http://garruru.github.io/LoliconHome/home.html" class="w3-bar-item w3-button w3-padding-large">LOLICON</a>
     <a href="http://localhost/Champion.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Champion</a>
     <a href="http://localhost/Combination.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Combination</a>
     <a href="http://localhost/Equipment.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Equipment</a>
@@ -62,36 +62,6 @@ body {font-family: "Lato", sans-serif}
 
   <div>
     <br/><br/><br/><br/><br/>
-  </div>
-
-<!-- Table AREA  -->
-  <div class="w3-responsive w3-card-4">
-      <table class="w3-table w3-striped w3-bordered">
-          <thead>
-              <tr class="w3-theme">
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Points</th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-                  <td>Jill</td>
-                  <td>Smith</td>
-                  <td>50</td>
-              </tr>
-              <tr class="w3-white">
-                  <td>Eve</td>
-                  <td>Jackson</td>
-                  <td>94</td>
-              </tr>
-              <tr>
-                  <td>Adam</td>
-                  <td>Johnson</td>
-                  <td>67</td>
-              </tr>
-          </tbody>
-      </table>
   </div>
 
   
