--- a/home.html
+++ b/home.html
@@ -31,6 +31,8 @@ body {font-family: "Lato", sans-serif}
         <a href="http://www.cs.ntou.edu.tw/cswp" class="w3-bar-item w3-button">NTOUCS</a>
       </div>
     </div>
+    <a href="#" class="w3-padding-large w3-hover-red w3-hide-small w3-right">PATCH 7.24</a>
+
   </div>
 </div>
 
