--- a/home.html
+++ b/home.html
@@ -23,6 +23,8 @@ body {font-family: "Lato", sans-serif}
     <a href="http://localhost/Combination.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Combination</a>
     <a href="http://localhost/Equipment.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Equipment</a>
     <a href="http://localhost/counter.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Counter</a>
+    <a href="http://localhost/join.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Join List</a>
+
 
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
